--- a/VulkanRaytraceC++.vcxproj.filters
+++ b/VulkanRaytraceC++.vcxproj.filters
@@ -35,6 +35,16 @@
     <None Include="triangle.frag">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="simp_shader.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="simp_shader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="compiler.sh" />
+    <None Include="compile.bat">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="rt_window.hpp">
