--- a/VulkanRaytraceC++.vcxproj
+++ b/VulkanRaytraceC++.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="rt_pipeline.cpp" />
     <ClCompile Include="rt_window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -149,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app.hpp" />
+    <ClInclude Include="rt_pipeline.hpp" />
     <ClInclude Include="rt_window.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
