--- a/VulkanRaytraceC++.vcxproj
+++ b/VulkanRaytraceC++.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="rt_device.cpp" />
     <ClCompile Include="rt_pipeline.cpp" />
     <ClCompile Include="rt_window.cpp" />
   </ItemGroup>
@@ -152,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app.hpp" />
+    <ClInclude Include="rt_device.hpp" />
     <ClInclude Include="rt_pipeline.hpp" />
     <ClInclude Include="rt_window.hpp" />
   </ItemGroup>
