--- a/VulkanRaytraceC++.vcxproj.filters
+++ b/VulkanRaytraceC++.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="rt_pipeline.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rt_device.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="triangle.vert">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rt_pipeline.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rt_device.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
